@@ -15,4 +15,5 @@ with contributions by:
     Nicu Pavel <npavel@ituner.com>
     Kai Krakow <kai@kaishome.de>
     Atsuhiko Yamanaka <ymnk@jcraft.com>
+    Ricardo Galli <gallir@uib.es>
 
